# wheelplex

./: main.py  pyproject.toml
lib/: models.py  pair.py  plex_client.py  plex_discovery.py  plex_media.py  session.py  utils.py
static/: app.js  style.css  wheel.html
