[tool.poetry]
name = "wheelplex"
version = "0.1.0"
description = ""
authors = ["Matt Lewis <matt@mplewis.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PlexAPI = "^4.4.1"
requests = "^2.25.1"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
ipython = "^7.21.0"
flake8 = "^3.9.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
